<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffdfeaf1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#36576f"
        android:textSize="@dimen/abc_text_size_large_material" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies"
        android:id="@+id/button"
        android:layout_marginTop="24dp"
        android:background="#f08c35"
        android:minWidth="200dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:onClick="onPopularMoviesClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_duo1"
        android:id="@+id/button2"
        android:layout_marginTop="8dp"
        android:background="#f08c35"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:minWidth="200dp"
        android:onClick="onScoresClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_duo2"
        android:id="@+id/button3"
        android:background="#f08c35"
        android:minWidth="200dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:onClick="onLibraryClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ant_terminator"
        android:id="@+id/button4"
        android:background="#f08c35"
        android:minWidth="200dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:onClick="onBuildItClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/materialize"
        android:id="@+id/button5"
        android:background="#f08c35"
        android:minWidth="200dp"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:onClick="onXYZReaderClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:background="#F44336"
        android:minWidth="200dp"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textColor="#ffffff"
        android:onClick="onCapstoneClick" />

</RelativeLayout>
